// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextFieldPopover snapshots > should render ButtonIconPopover 1`] = `
<DocumentFragment>
  <div
    class="ButtonIconPopover"
  >
    <div
      class="Popover Popover--bg-neutral5"
      data-test-popover="popover"
      style="left: 0px; top: 0px;"
    >
      children
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextFieldPopover snapshots > should render with opened popover 1`] = `
<DocumentFragment>
  <div
    class="ButtonIconPopover"
  >
    <div
      class="Popover Popover--bg-neutral5 Popover--selected"
      data-test-popover="popover"
      style="left: 0px; top: 0px;"
    >
      children
    </div>
  </div>
</DocumentFragment>
`;
